--- a/标签通用属性.html
+++ b/标签通用属性.html
@@ -104,6 +104,6 @@
                 <option value="female">女</option>
             </select>
         </form>
-        <iframe src="标签属性.html" frameborder="1" scrolling="yes"></iframe>
+        <iframe src="标签学习.html" frameborder="1" scrolling="yes"></iframe>
 </body>
 </html>
